appId: com.toughra.ustadmobile
env:
  TESTRESULTSDIR: "${TESTRESULTSDIR}/001_001_admin_can_add_content_004-pdf"
  TESTNAME: "001_001_admin_can_add_content_004-pdf"
---
- clearState: com.toughra.ustadmobile
- runFlow:
    file: "../common/startserver.yaml"
    env:
      CONTROLSERVER: ${CONTROLSERVER}
      TESTSERIAL: ${TESTSERIAL}
      TESTNAME: ${TESTNAME}
- runFlow:
    file: "../common/add_content.yaml"
    env:
      TESTFILENAME: Pdf_Content.pdf
      TESTCONTENTNAME: AddContentPdfTest
      CONTROLSERVER: ${CONTROLSERVER}
      TESTSERIAL: ${TESTSERIAL}
- runFlow:
    file: "../common/login_download_and_open_content.yaml"
    env:
       TESTCONTENTNAME: AddContentPdfTest
- assertVisible:
    id: "com.toughra.ustadmobile:id/fragment_pdf_content_pdfview"
- takeScreenshot: "${TESTRESULTSDIR}/screenshots/content_download_and_open"
- back
- tapOn: "ATTEMPTS"
- takeScreenshot: "${TESTRESULTSDIR}/screenshots/PDF_attempts_page"