appId: com.toughra.ustadmobile
env:
  TESTRESULTSDIR: "${TESTRESULTSDIR}/001_001_admin_can_add_content_005-folder"
  TESTNAME: "001_001_admin_can_add_content_005-folder"
---
- clearState: com.toughra.ustadmobile
- runFlow:
    file: "../common/startserver.yaml"
    env:
      CONTROLSERVER: ${CONTROLSERVER}
      TESTSERIAL: ${TESTSERIAL}
      TESTNAME: ${TESTNAME}
# clear the app
- clearState: com.toughra.ustadmobile
# clear the downloads
- evalScript: ${http.get(CONTROLSERVER + "cleardownloads?device=" + TESTSERIAL)}
# push the test file to the downloads
- evalScript: ${http.get(CONTROLSERVER + "pushcontent?test-file-name=" + "test_folder" +"&device=" + TESTSERIAL)}
# get started
- launchApp
- tapOn: "GET STARTED"
# select site
- runFlow: "../common/select_site.yaml"
# admin login
- runFlow:
    file: "../common/user_login.yaml"
# adding content to library
- tapOn: "Library"
- tapOn:
    id: "floating_action_button"
- tapOn: "From Folder"
- tapOn: "Download"
- tapOn:
    text: "test_folder"
- tapOn: "USE THIS FOLDER"
- tapOn: "ALLOW"
- tapOn: "SAVE"
- takeScreenshot: "${TESTRESULTSDIR}/screenshots/content_add_to_library"
- tapOn: "Folder"
# verify PDF content inside folder working as expected
- tapOn: "Document"
- extendedWaitUntil:
    notVisible: "Importing"
    timeout: 10000
- extendedWaitUntil:
    notVisible: "Uploading"
    timeout: 10000
- tapOn: Open
- assertVisible: "PDF PAGE"
- tapOn: "Back"
- tapOn: "Back"
# verify VIDEO content inside folder working as expected
- tapOn: "Video"
- tapOn: Open
- tapOn: "Play"
- extendedWaitUntil:
    visible: "Play"
    timeout: 20000
- runFlow:
    file: "../common/login_download_and_open_content.yaml"
#Download and open content
- tapOn: "Library"
- extendedWaitUntil:
    visible: "Folder"
    timeout: 60000
- tapOn: "Folder"
# verify Epub content inside folder working as expected
- extendedWaitUntil:
    visible: "E-book"
    timeout: 60000
- tapOn: "E-book"
- tapOn: Download
- tapOn: Open
- assertVisible: "Cover"
- tapOn: "Back"
- tapOn: "Back"
