appId: com.toughra.ustadmobile
tags:
  - contentTest
  - contentViaLink
env:
  TESTRESULTSDIR: "build/results/Screenshots/001_001_admin_can_add_content_003-video"
onFlowStart:
  - runScript:
      file: "common/startserver.js"
      env:
        TESTCONTROLLER_URL: ${TESTCONTROLLER_URL}
  - clearState: com.toughra.ustadmobile
onFlowComplete:
  - runScript:
      file: "common/stopserver.js"
      env:
        TESTCONTROLLER_URL: ${TESTCONTROLLER_URL}
---
- runFlow: "common/clear_state_and_learning_space_existing_userflow.yaml"
# select site
- runFlow: "common/select_site.yaml"
# admin login
- runFlow:
    file: "common/admin_login.yaml"
# adding content to library
- tapOn: "Library"
- tapOn:
    id: "floating_action_button"
# download folder and download content from inside folder
- tapOn: "From link"
- tapOn: "Enter Url*"
- inputText: "${output.testServerControllerUrl}testcontroller/test-files/content/H5p_Content.h5p"
- tapOn: "Next"
- assertVisible: "True/False Question"
- takeScreenshot: "${TESTRESULTSDIR}/content_add_to_library"
- tapOn: "SAVE"
- tapOn: "True/False Question"
- extendedWaitUntil:
    notVisible: "Importing"
    timeout: 80000
- extendedWaitUntil:
    notVisible: "Uploading"
    timeout: 80000
- tapOn: "Open"
- runFlow:
    file: "common/chrome-first-run-check.yaml"
- assertVisible: "Check"
- tapOn: "Close tab"
- runFlow:
    file: "common/login_download_and_open_content.yaml"
- tapOn: "Library"
- extendedWaitUntil:
    visible: "True/False Question"
    timeout: 60000
- tapOn: "True/False Question"
- tapOn: "Download"
- tapOn: "Open"
- extendedWaitUntil:
    visible: "Check"
    timeout: 5000
- takeScreenshot: "${TESTRESULTSDIR}/h5p_content_download_and_open"
- tapOn: "Close tab"
- tapOn: "Back"