appId: com.toughra.ustadmobile
tags:
  - contentTest
env:
  TESTRESULTSDIR: "build/reports/maestro/001_003_admin_can_delete_and_restore_content_001/Screenshots"
onFlowStart:
  - startRecording: 001_003_admin_can_delete_and_restore_content_001
  - runScript:
      file: "common/startserver.js"
      env:
        TESTCONTROLLER_URL: ${TESTCONTROLLER_URL}
  - clearState: com.toughra.ustadmobile
onFlowComplete:
  - stopRecording
  - runScript:
      file: "common/stopserver.js"
      env:
        TESTCONTROLLER_URL: ${TESTCONTROLLER_URL}
---
- runFlow:
    file: "common/clear_login_and_add_content.yaml"
    env:
      TESTFILENAME: Epub_Content1.epub
- tapOn: "SAVE"
- takeScreenshot: "${TESTRESULTSDIR}/screenshots/screen_before_hiding_content"
- longPressOn:
    text: "E-book"
- tapOn: "Delete"
- assertNotVisible: "E-book"
- takeScreenshot: "${TESTRESULTSDIR}/screenshots/screen_after_deleting_content_from_library"

# login to make sure the content is hidden
#clear state and launch app
- runFlow: "common/clear_state_and_learning_space_existing_userflow.yaml"
- runFlow: "common/select_site.yaml"
#admin login
- runFlow:
    file: "common/admin_login.yaml"
- tapOn: "Library"
- assertNotVisible: "E-book"
- tapOn: "Settings"
- tapOn: "Deleted items"
- tapOn: "Restore"
- tapOn: "Library"
- assertVisible: "E-book"

# login to make sure the content is restored
#clear state and launch app
- runFlow: "common/clear_state_and_learning_space_existing_userflow.yaml"
- runFlow: "common/select_site.yaml"
#admin login
- runFlow:
    file: "common/admin_login.yaml"
- tapOn: "Library"
- assertVisible: "E-book"
- takeScreenshot: "${TESTRESULTSDIR}//screen_after_restoring_content_from_library"
