appId: com.toughra.ustadmobile
env:
  TESTRESULTSDIR: "${TESTRESULTSDIR}/001_005_admin_can_delete_and_restore_content_001"
  TESTNAME: "001_005_admin_can_delete_and_restore_content_001"
---
- clearState: com.toughra.ustadmobile
- runFlow:
    file: "../common/startserver.yaml"
    env:
      CONTROLSERVER: ${CONTROLSERVER}
      TESTSERIAL: ${TESTSERIAL}
      TESTNAME: ${TESTNAME}
- runFlow:
    file: "../common/add_content.yaml"
    env:
      TESTFILENAME: Epub_Content1.epub
      CONTROLSERVER: ${CONTROLSERVER}
      TESTSERIAL: ${TESTSERIAL}
- tapOn: "SAVE"
- takeScreenshot: "${TESTRESULTSDIR}/screenshots/screen_before_hiding_content"
- longPressOn:
    text: "E-book"
- tapOn: "Delete"
- takeScreenshot: "${TESTRESULTSDIR}/screenshots/screen_after_deleting_content_from_library"

# login to make sure the content is hidden
#clear state and launch app
- runFlow: "../common/clear_state_and_get_started.yaml"
- runFlow: "../common/select_site.yaml"
#admin login
- runFlow:
    file: "../common/user_login.yaml"
- tapOn: "Library"
- assertNotVisible: "E-book"
- tapOn: "Settings"
- tapOn: "Deleted items"
- tapOn: "Restore"
- tapOn: "Library"
- assertVisible: "E-book"

# login to make sure the content is restored
#clear state and launch app
- runFlow: "../common/clear_state_and_get_started.yaml"
- runFlow: "../common/select_site.yaml"
#admin login
- runFlow:
    file: "../common/user_login.yaml"
- tapOn: "Library"
- assertVisible: "E-book"
- takeScreenshot: "${TESTRESULTSDIR}/screenshots/screen_after_restoring_content_from_library"
